fix nav spacing on mobile

--- a/src/css/_nav.scss
+++ b/src/css/_nav.scss
@@ -12,6 +12,9 @@ nav {
         top: 20px;
         margin: 0;
         display: inline;
+        @include breakpoint(small) {
+            right: 10px;
+        }
         li {
             margin: 0 10px;
             display: inline;
